# e2a

./: .gitignore  README.md
root/: .coveragerc  .env.example  .env.slack.example  .gitignore  Dockerfile  Makefile  cli_stages.py  prefect.yaml  pyproject.toml  pytest.ini  requirements.txt  run.sh
root/.github/workflows/: ci.yml
root/app/: __init__.py  main.py  settings.py
root/app/business/: __init__.py  reason_codes.py
root/app/cli/: processing_stages.py
root/app/config/: resolution_config.py
root/app/middleware/: correlation.py  tenancy.py
root/app/observability/: __init__.py  logging.py  metrics.py  tracing.py
root/app/resilience/: __init__.py  circuit_breaker.py  decorators.py  health_check.py  rate_limiter.py  retry_policies.py
root/app/routes/: __init__.py  admin.py  bi_dashboard.py  dashboard.py  exception_details.py  exceptions.py  health.py  ingest.py  ingest_optimized.py  slack.py  websocket.py
root/app/schemas/: ai.py  exception.py  ingest.py  ingest_batch.py
root/app/security/: pii.py  (+2 more)
root/dashboard/: Dockerfile  next.config.ts  package-lock.json  package.json
root/debug/: e2e_sanity_check.py
root/demo/: README.md
root/docker/: docker-compose.yml  otel-collector.yaml
root/flows/: README.md  __init__.py  billing_management_flow.py  business_operations_flow.py  event_processor_flow.py  event_streaming.py  exception_management_flow.py  invoice_validate_nightly.py  order_processing_flow.py
root/migrations/: env.py
root/prompts/: README.md  automated_resolution.md  exception_classification.md  order_problem_detection.md  policy_linting.md
root/scripts/: generate_invoices.py  replay_dlq.py
root/supabase/: config.toml
root/tests/: __init__.py  conftest.py  test_invoice_validation.py  test_sla_engine.py
(+94 files in other folders)
